--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ body * {
 
 #container {
   width: 360px;
+  max-width: 588px;
   margin: 56px auto 0px;
   padding: 0 24px;
 }
@@ -57,11 +58,10 @@ body * {
 /*switch*/
 
 #switch {
-    position: relative;
-    width: 64px;
+  position: relative;
+  width: 64px;
 
-    margin: 4px auto;
-    
+  margin: 4px auto;
 }
 
 #switch button {
