--- a/style.css
+++ b/style.css
@@ -77,11 +77,16 @@ body * {
   left: 0;
   z-index: 1;
   transform: translateY(-50%);
+
+  animation: slide-back 0.4s forwards;
 }
 
 .ligth #switch button {
-  right: 0;
-  left: initial;
+  animation: slide-in 0.4s forwards;
+}
+
+#switch button:hover {
+  outline: 8px solid var(--hightligth-color);
 }
 
 #switch span {
@@ -171,5 +176,25 @@ footer {
 
   .ligth {
     --bg-url: url(./assets/bg-desktop-ligth.jpg);
+  }
+}
+
+/* ANIMATION */
+
+@keyframes slide-in {
+  from {
+    left: 0;
+  }
+  to {
+    left: 50%;
+  }
+}
+
+@keyframes slide-back {
+  from {
+    left: 50%;
+  }
+  to {
+    left: 0;
   }
 }
