--- a/style.css
+++ b/style.css
@@ -171,11 +171,11 @@ footer {
 
 @media (min-width: 700px) {
   :root {
-    --bg-url: url(./assets/bg-desktop.jpg);
+    --bg-url: url(./assets/Bg-desktop.jpg);
   }
 
   .ligth {
-    --bg-url: url(./assets/bg-desktop-ligth.jpg);
+    --bg-url: url(./assets/Bg-desktop-ligth.jpg);
   }
 }
 
